# routes/index.js
@@ -37,5 +37,6 @@ router.use('/auth', require('./auth'));
 router.use('/movies', require('./movies'));
 router.use('/user-lists', require('./userLists'));
 router.use('/users', require('./users'));
+router.use('/reviews', require('./reviews'));
 
 module.exports = router;
